--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "jlafer-flex-util",
   "description": "My utility functions for Twilio Flex plugin development",
-  "version": "0.0.3",
-  "main": "dist/bundle.cjs.js",
-  "module": "dist/bundle.esm.js",
-  "browser": "dist/bundle.umd.js",
-  "dependencies": {
-    "ramda": "^0.26.1"
+  "version": "0.0.5",
+  "main": "index.js",
+  "scripts": {
+    "prepublishOnly": "npm run release",
+    "release": "npm run build:dev && npm run build:prod",
+    "build:prod": "NODE_ENV=production rollup -c",
+    "build:dev": "NODE_ENV=development rollup -c",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
-    "babel-jest": "^26.1.0",
-    "jest": "^26.1.0",
-    "lodash": ">=4.17.15",
-    "rollup": "^2.18.2",
+    "@babel/preset-react": "^7.10.4",
     "@rollup/plugin-babel": "^5.0.4",
     "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-node-resolve": "^8.1.0"
+    "@rollup/plugin-node-resolve": "^8.1.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "jest": "^26.1.0",
+    "lodash": ">=4.17.15",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "rollup": "^2.18.2"
   },
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "test": "jest"
-  },
-  "files": [
-    "dist"
-  ]
+  "peerDependencies": {
+    "react": ">= 16.x.x"
+  }
 }
