--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
   },
   "peerDependencies": {
     "react": ">= 16.x.x"
+  },
+  "dependencies": {
+    "base-64": "^0.1.0",
+    "ramda": "^0.27.0",
+    "twilio-sync": "^0.12.2"
   }
 }
