--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jlafer-flex-util",
   "description": "My utility functions for Twilio Flex plugin development",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "main": "index.js",
   "scripts": {
     "prepublishOnly": "npm run release",
@@ -18,10 +18,15 @@
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^8.1.0",
     "@rollup/plugin-replace": "^2.3.3",
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.0",
     "jest": "^26.1.0",
     "lodash": ">=4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "regenerator-runtime": "^0.13.7",
     "rollup": "^2.18.2"
   },
   "peerDependencies": {
@@ -30,6 +35,6 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "ramda": "^0.27.0",
-    "twilio-sync": "^0.12.2"
+    "twilio-sync": "^3.0.1"
   }
 }
